fixing various overflow on widget and resource index page more space for charts

--- a/app/assets/stylesheets/resources.css.less
+++ b/app/assets/stylesheets/resources.css.less
@@ -1,4 +1,10 @@
 @import 'variables';
+.resources.index {
+  .content {
+    overflow-x: auto;
+    width: 100%;
+  }
+}
 .resources.show .item-attributes {
   .table {
     border: 1px solid #DDD;
